--- a/public/product-list.html
+++ b/public/product-list.html
@@ -178,7 +178,7 @@ body{background:#f0f2f5;font-size:14px}
 </div>
 
 <script>
-const API_BASE_URL = 'http://localhost:3000/api';
+const API_BASE_URL = '/api';
 let allProducts = [];
 let productToDelete = null;
 let currentUPI = null;
