--- a/public/product-list.html
+++ b/public/product-list.html
@@ -27,7 +27,7 @@ body{background:#f0f2f5;font-size:14px}
 .stat-label{color:#666;font-size:12px}
 
 .products-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px;margin-bottom:20px}
-.product-card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.1);transition:transform 0.3s}
+.product-card{ padding: auto;background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.1);transition:transform 0.3s}
 .product-card:hover{transform:translateY(-3px);box-shadow:0 4px 12px rgba(0,0,0,0.15)}
 .product-image{width:100%;height:150px;object-fit:cover;border-bottom:1px solid #eee}
 .product-content{padding:12px}
@@ -89,18 +89,18 @@ body{background:#f0f2f5;font-size:14px}
 <body>
 <div class="header">
     <div class="header-content">
-        <div class="header-title">📦 Product Dashboard</div>
+        <div class="header-title"> Product Dashboard</div>
         <div class="header-actions">
-            <a href="/add-product.html" class="btn btn-add">➕ Add Product</a>
-            <button class="btn btn-upi" onclick="openUPIModal()">💳 UPI ID</button>
-            <button class="btn" onclick="refreshList()">🔄 Refresh</button>
+            <a href="/add-product.html" class="btn btn-add"> Add Product</a>
+            <button class="btn btn-upi" onclick="openUPIModal()"> UPI ID</button>
+            <button class="btn" onclick="refreshList()"> Refresh</button>
         </div>
     </div>
 </div>
 
 <div class="container">
     <div class="search-box">
-        <input type="text" class="search-input" id="searchInput" placeholder="🔍 Search products..." onkeyup="filterProducts()">
+        <input type="text" class="search-input" id="searchInput" placeholder=" Search products..." onkeyup="filterProducts()">
     </div>
 
     <div class="stats" id="stats">
